--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "repository": "github:AlephNeil/actual",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "concat-stream": "^1.6.2",
     "express": "^4.16.2",
     "knex": "^0.14.4",
     "mssql": "^4.1.0",
@@ -20,6 +21,7 @@
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.3",
     "redis": "^2.8.0",
+    "smtp-server": "^3.4.2",
     "strftime": "^0.10.0",
     "underscore": "^1.9.0",
     "webdav-server": "^2.3.16",
