--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concat-stream": "^1.6.2",
     "express": "^4.16.2",
     "knex": "^0.14.4",
+    "mailparser": "^2.2.0",
     "mssql": "^4.1.0",
     "mysql": "^2.15.0",
     "node-filter-async": "0.0.4",
@@ -21,6 +22,7 @@
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.3",
     "redis": "^2.8.0",
+    "request-promise": "^4.2.2",
     "smtp-server": "^3.4.2",
     "strftime": "^0.10.0",
     "underscore": "^1.9.0",
